# Rust-Professional

./: Cargo.toml  report.json
exercises/easy/: algorithm1.rs  algorithm2.rs  algorithm3.rs  algorithm4.rs
